addons/k8s-gatekeeper/templates/medtech-uk_dtac_compliance-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: medtech-uk_dtac_compliance
  annotations:
    rulehub.id: medtech.uk_dtac_compliance
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: MedtechUk_dtac_complianceConstraint
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            enabled:
              type: boolean
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package rulehub.medtech.uk_dtac_compliance
      import future.keywords.if

      default deny = []

      # Example: deny with a message
      deny[msg] {
        input.review.kind.kind == "Deployment"
        msg := "medtech.uk_dtac_compliance: example violation"
      }
